fix emote menu skin tone dropdown z-index

--- a/src/components/Chat/EmoteMenu.scss
+++ b/src/components/Chat/EmoteMenu.scss
@@ -15,7 +15,7 @@
     border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
     box-shadow: var(--shadow-elevation-1);
     clip-path: inset(var(--border-radius-small) 0px -500px 0px);
-    z-index: 1;
+    z-index: var(--z-index-above);
     display: flex;
     flex-direction: row;
   }
